Fixing oversized messages-box on Iphone SE.

--- a/Lyceum/static/styles/index.css
+++ b/Lyceum/static/styles/index.css
@@ -292,17 +292,20 @@ input:focus:-ms-input-placeholder {
     font-size: 22px;
     font-family: 'Poppins', sans-serif;
     color: black;
+    height: 100%;
 }
 
 .messages-box {
     width: 20%;
     display: flex;
+    align-items: center;
 }
 
 .post svg {
     margin-left: 0px;
     margin-left: 5px;
     width: 17px;
+    height: 100%;
 }
 
 .post-author {
